# DCGAN-CelebA-PyTorch-CPP

./: CMakeLists.txt  Doxyfile  README.md  automate.sh  split_dataset.py
DCGAN/: CMakeLists.txt  dataset.cpp  dataset.hpp  display_samples.py  main.cpp  network.hpp  split_dataset.py
DCGAN-gitlab/dcgan-libtorch/: CMakeLists.txt  README.md  dataset.cpp  main.cpp  network.cpp  utils.hpp
DCGAN.xcodeproj/: project.pbxproj
DCGAN.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Python/: main.py
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_arguments-members.html  class_arguments.html  class_custom_dataset-members.html  class_custom_dataset.html  class_discriminator-members.html  class_discriminator.html  class_generator-members.html  class_generator.html  classes.html  dataset_8cpp.html  dataset_8hpp.html  dataset_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  network_8hpp.html  network_8hpp_source.html  pages.html  struct_conv_transpose2d_wrapper_impl-members.html  struct_conv_transpose2d_wrapper_impl.html  todo.html
docs/latex/: annotated.tex  class_arguments.tex  class_custom_dataset.eps  class_custom_dataset.tex  class_discriminator.eps  class_discriminator.tex  class_generator.eps  (+14 more)
images/: README.md
include/: dataset.hpp  network.hpp
src/: dataset.cpp  main.cpp
utils/: display_samples.py  visualize.py
(+43 files in other folders)
